Refactored to use feature based architecture and ducks

--- a/client/src/containers/ProfilePage/githubDisplay/githubDisplay.scss
+++ b/client/src/containers/ProfilePage/githubDisplay/githubDisplay.scss
@@ -1,11 +1,4 @@
-.Profile{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.Profile-githubProfile {
+.githubDisplay-Profile {
   width: 350px;
   height: 180px;
   border-radius: 3px;
