Created footer component, added to App

--- a/client/src/containers/App/app.scss
+++ b/client/src/containers/App/app.scss
@@ -1,8 +1,5 @@
 .App-appWrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height:100%;
+  min-height:100vh;
   position: relative;
+  padding-bottom: 20px;
 }
