--- a/client/src/components/Footer/footer.scss
+++ b/client/src/components/Footer/footer.scss
@@ -3,11 +3,28 @@
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 1rem;
+  padding: 5px;
   background-color: #273135;
+  color: white;
   text-align: center;
 
   a {
     color: white;
   }
+}
+
+.Footer-attribution {
+  display: inline-block;
+  margin-top: 0;
+  margin-right: 500px;
+  margin-bottom: 0;
+  margin-left: 0;
+}
+
+@media (max-width: 790px) {
+  .Footer-attribution {margin-right: 300px;}
+}
+
+@media (max-width: 600px) {
+  .Footer-attribution {margin-right: 75px;}
 }
