--- a/client/src/components/Footer/footer.scss
+++ b/client/src/components/Footer/footer.scss
@@ -7,7 +7,7 @@
   background-color: #273135;
   color: white;
   text-align: center;
-
+  font-family: 'Lato', sans-serif;
   a {
     color: white;
   }
