--- a/client/src/Auth/LoginPage/login.scss
+++ b/client/src/Auth/LoginPage/login.scss
@@ -1,10 +1,5 @@
-.login{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 Button.socialButton{
+  margin: 0 auto;
   display: flex;
   align-items: center;
   p{
