Update header to use flexbox based display

--- a/client/src/Auth/loginSelection/loginSelection.scss
+++ b/client/src/Auth/loginSelection/loginSelection.scss
@@ -1,8 +1,7 @@
 .loginSelection {
   display: flex;
   justify-content: center;
-  float: right;
-  margin-top: 20px;
+  padding: 5px;
 
   p {
     margin: 0 5px;
