--- a/client/src/components/BasicHeader/header.scss
+++ b/client/src/components/BasicHeader/header.scss
@@ -10,3 +10,16 @@
     display: inline-block;
   }
 }
+
+.Header-row{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media (max-width: 360px) {
+  .Header-row{
+    flex-direction: column;
+  }
+}
