--- a/client/src/containers/HomePage/SearchHeader/searchHeader.scss
+++ b/client/src/containers/HomePage/SearchHeader/searchHeader.scss
@@ -41,6 +41,10 @@ input.form-control-SearchHeader{
     color: white;
     background: #273135;
   }
+
+  &:focus{
+    color: white;
+  }
 }
 
 @media (max-width: 500px) {
